--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@ Some code used from w3schools, edited by Henry Jack
 
       <div id="displaylogin" class="collapse">
           <iframe src="connect.html" height="575px" width="100%" name="targetframe" allowTransparency="true" scrolling="no" frameborder="0" ></iframe>
-      </div>
+          <a style="text-decoration: none" href="#" onclick="displayImages()" data-toggle="collapse" data-target="#displaylogin" class="close2">&times;</a>       
+        </div>
 
       <div id="allimagescontainer">
       <!-- Trending and New Tab -->
