Nav, img organization, tab fixes

--- a/connect.html
+++ b/connect.html
@@ -36,7 +36,7 @@
 </html>
 
 <style>
-.form { position: relative; z-index: 1; background: #FFFFFF; max-width: 300px; margin: 0 auto 100px; padding: 30px; }
+.form { position: relative; z-index: 1; background: #FFFFFF; max-width: 350px; margin: 0 auto 100px; padding: 30px; margin-top: 125px; }
 .form { border-radius: 10px; text-align: center; }
 .form .thumbnail { background: #EF3B3A; width: 150px; height: 150px; margin: 0 auto 30px; padding: 50px 30px; }
 .form .thumbnail { border-radius: 100%;  box-sizing: border-box; }
