--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@ Some code used from w3schools, edited by Henry Jack
          <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                <li class="nav-item active">
-                  <i class="fas fa-home"></i><a class="nav-link" href="#">&nbsp;Home</a>
+                  <i class="fas fa-home"></i><a class="nav-link ultext" href="#">&nbsp;Home</a>
                </li>
                <li class="nav-item">
-                  <i class="fas fa-user user-icon"></i><a href="#" class="nav-link" onclick="displayImages()" data-toggle="collapse" data-target="#displaylogin">&nbsp;Sign Up/Login</a>
+                  <i class="fas fa-user user-icon"></i><a href="#" class="nav-link ultext" onclick="displayImages()" data-toggle="collapse" data-target="#displaylogin">&nbsp;Sign Up/Login</a>
                </li>
                <li class="nav-item">
                   <div class="upload-class">
@@ -46,7 +46,8 @@ Some code used from w3schools, edited by Henry Jack
             </form>
             </div>
          </div>
-      </nav><br><br><br>
+      </nav>
+      <br><div class="bottomnavmargin"></div>
 
       <div id="displaylogin" class="collapse">
         <iframe src="connect.html" style="position: absolute; top: 0px; bottom: 0px; width: 100%; height: 100%;" allowTransparency="true" scrolling="no" frameborder="0" name="targetframe"></iframe>
@@ -59,12 +60,12 @@ Some code used from w3schools, edited by Henry Jack
          <button class="tablinks" onclick="openTabType(event, 'Trending-TabType')" id="defaultOpen">Trending</button>
          <button class="tablinks" onclick="openTabType(event, 'New-TabType')">New</button>
       </div>
+      <div class="bottomtabsmargin"></div><br>
 
       <!-- New images -->
       <div id="New-TabType" class="tabcontent">
          <h3 class="tabtitle">New Images</h3>
          <div id="mCxNew" class="modal">
-
             <a style="text-decoration: none" href="#" class="closeNew">&times;</a><img class="modal-content" id="imIDxNew">
             <div id="captionNew"></div>
          </div>
