--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ Some code used from w3schools, edited by Henry Jack
    <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      <title>imago</title>
+      <title>Imago</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -18,12 +18,13 @@ Some code used from w3schools, edited by Henry Jack
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
       <link href="https://fonts.googleapis.com/css?family=Pacifico|Roboto" rel="stylesheet">
       <link href="style.css" rel="stylesheet">
+      <link rel="icon" type="image/png" href="assets/favicon.png" />
    </head>
    <body>
 
     <!-- Navbar -->
       <nav class="navbar navbar-expand-custom navbar-light">
-         <a class="navbar-brand" href="#">imago</a>
+         <a class="navbar-brand" href="#"><img style="width: 99px; height: 30px;" src="assets/im1c.png"/></a>
          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
          <span class="navbar-toggler-icon"></span>
          </button>          
