iframe fixes, nav breakpoint

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@ Some code used from w3schools, edited by Henry Jack
       </nav>
       <br><div class="bottomnavmargin"></div>
 
-      <div id="displaylogin" class="collapse">
-        <iframe src="connect.html" style="position: absolute; top: 0px; bottom: 0px; width: 100%; height: 100%;" allowTransparency="true" scrolling="no" frameborder="0" name="targetframe"></iframe>
+      <div id="displaylogin" class="collapse" style="-webkit-overflow-scrolling: touch; overflow: auto;" >
+        <iframe class="connectiframe" src="connect.html" allowTransparency="true" scrolling="no" frameborder="0" name="targetframe"></iframe>
         <a style="text-decoration: none" href="#" onclick="displayImages()"class="close2">&times;</a>
       </div>
 
