--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ Some code used from w3schools, edited by Henry Jack
       <link href="https://fonts.googleapis.com/css?family=Pacifico|Roboto" rel="stylesheet">
       <link href="style.css" rel="stylesheet">
       <link rel="icon" type="image/png" href="assets/favicon.png" />
+      <script src="C:\Users\hjack\Documents\GitHub\Imago\csi.js-master\csi.min.js"></script>
    </head>
    <body>
 
@@ -50,9 +51,8 @@ Some code used from w3schools, edited by Henry Jack
       </nav>
       <br><div class="bottomnavmargin"></div>
 
-      <div id="displaylogin" class="collapse" style="-webkit-overflow-scrolling: touch; overflow: auto;" >
-        <iframe class="connectiframe" src="connect.html" allowTransparency="true" scrolling="no" frameborder="0" name="targetframe"></iframe>
-        <a style="text-decoration: none" href="#" onclick="displayImages()"class="close2">&times;</a>
+      <div id="displaylogin" class="collapse" style="-webkit-overflow-scrolling: touch; overflow: auto;">
+        <div data-include="connect.html"></div><a style="text-decoration: none" href="#" onclick="displayImages()"class="close2">&times;</a>
       </div>
 
       <div id="allimagescontainer">
