--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ Some code used from w3schools, edited by Henry Jack
       <link href="https://fonts.googleapis.com/css?family=Pacifico|Roboto" rel="stylesheet">
       <link href="style.css" rel="stylesheet">
       <link rel="icon" type="image/png" href="assets/favicon.png" />
-      <script src="C:\Users\hjack\Documents\GitHub\Imago\csi.js-master\csi.min.js"></script>
+      <script src="csi.js-master\csi.min.js"></script>
    </head>
    <body>
 
@@ -51,7 +51,7 @@ Some code used from w3schools, edited by Henry Jack
       </nav>
       <br><div class="bottomnavmargin"></div>
 
-      <div id="displaylogin" class="collapse" style="-webkit-overflow-scrolling: touch; overflow: auto;">
+      <div id="displaylogin" class="collapse">
         <div data-include="connect.html"></div><a style="text-decoration: none" href="#" onclick="displayImages()"class="close2">&times;</a>
       </div>
 
