--- a/connect.html
+++ b/connect.html
@@ -39,11 +39,11 @@
 .container { position: relative; z-index: 1; max-width: 300px; margin: 0 auto; }
 .container:before, .container:after { content: ""; display: block; clear: both; }
 .container .info { margin: 20px 30px 50px 30px; text-align: center; }
-.container .info h1 { margin: 0 0 15px; padding: 0; font-size: 36px; font-weight: 300; color: #1a1a1a; }
+.container .info h1 { margin: 0 0 15px; padding: 0; font-size: 32px; font-weight: 300; color: #1a1a1a; }
 .container .info span { color: #4d4d4d; font-size: 12px; }
 .container .info span a { color: #000000; text-decoration: none; }
 .container .info span .fa { color: #EF3B3A; }
-.connect-master { background: #ccc; font-family: "Roboto", sans-serif; }
+.connect-master { background: #ccc; font-family: "Roboto", sans-serif !important; }
 .connect-master { content: ""; position: fixed; top: 0; left: 0; display: block; background: rgba(204, 204, 204, 0.3); width: 100%; height: 100%; }
 .container-fluid { position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); }
 </style>
