--- a/connect.html
+++ b/connect.html
@@ -1,4 +1,15 @@
-<div class="connect-master">
+<!DOCTYPE html>
+<html lang="en">
+   <head>
+      <meta charset="UTF-8">
+      <title>Flat Login Form</title>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+      <link rel='stylesheet prefetch' href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900'>
+      <link rel='stylesheet prefetch' href='https://fonts.googleapis.com/css?family=Montserrat:400,700'>
+      <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
+      <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+   </head>
+   <body>
       <div class="container-fluid">
       <div class="form">
          <div class="container">
@@ -21,7 +32,8 @@
          </form>
       </div>
     </div>
-</div>
+   </body>
+</html>
 
 <style>
 .form { position: relative; z-index: 1; background: #FFFFFF; max-width: 350px; margin: 0 auto 100px; padding: 30px; margin-top: 125px; }
@@ -39,12 +51,12 @@
 .container { position: relative; z-index: 1; max-width: 300px; margin: 0 auto; }
 .container:before, .container:after { content: ""; display: block; clear: both; }
 .container .info { margin: 20px 30px 50px 30px; text-align: center; }
-.container .info h1 { margin: 0 0 15px; padding: 0; font-size: 32px; font-weight: 300; color: #1a1a1a; }
+.container .info h1 { margin: 0 0 15px; padding: 0; font-size: 36px; font-weight: 300; color: #1a1a1a; }
 .container .info span { color: #4d4d4d; font-size: 12px; }
 .container .info span a { color: #000000; text-decoration: none; }
 .container .info span .fa { color: #EF3B3A; }
-.connect-master { background: #ccc; font-family: "Roboto", sans-serif !important; }
-.connect-master { content: ""; position: fixed; top: 0; left: 0; display: block; background: rgba(204, 204, 204, 0.3); width: 100%; height: 100%; }
+body { background: #ccc; font-family: "Roboto", sans-serif; }
+body:before { content: ""; position: fixed; top: 0; left: 0; display: block; background: rgba(255, 255, 255, 0.8); width: 100%; height: 100%; }
 .container-fluid { position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); }
 </style>
 
