Fix search overlap on nav breakpoint

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                  </li>
               </ul>
               <form class="form-inline my-2 my-lg-0">
-              <input class="form-control mr-sm-2" type="search" placeholder="Search images, users.." style="width: 80%; border-radius:5px 0px 0px 5px;" >
-              <button class="btn btn-outline-success my-2 my-sm-0 searchnavbtn" type="submit" style="border-radius:0px 5px 5px 0px; margin-left: -8px;"><i class="fas fa-search"></i></button>
+              <input class="form-control mr-sm-2 search-bar" type="search" placeholder="Search images, users..">
+              <button class="btn btn-outline-success my-2 my-sm-0 searchnavbtn" type="submit"><i class="fas fa-search"></i></button>
               </form>
               </div>
            </div>
